force-app/main/default/objects/Chit_Customer__c/Chit_Customer__c.object-meta.xml
<CustomObject>
    <label>Chit Customer</label>
    <nameField>
        <label>Customer Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chit Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>