force-app/main/default/objects/Chit_Customer__c/validationRules/Aadhar_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER( Aadhar_Number__c  ))</errorConditionFormula>
    <errorDisplayField>Aadhar_Number__c</errorDisplayField>
    <errorMessage>Aadhar should contain only numbers</errorMessage>
</ValidationRule>