force-app/main/default/objects/Chit_Customer__c/validationRules/Bank_Account_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(Bank_Account_Number__c ))</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Bank account number should contain only Numbers</errorMessage>
</ValidationRule>