force-app/main/default/objects/Chit_Customer__c/validationRules/PAN_Card_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Card_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX( PAN_Number__c  ,&quot;[A-Z]{5}[1-9]{4}[A-Z]{1}&quot;)</errorConditionFormula>
    <errorDisplayField>PAN_Number__c</errorDisplayField>
    <errorMessage>Incorrect PAN Card Format (Ex: ABCDE1234F)</errorMessage>
</ValidationRule>